# cpp-sdk-contrib

./: .bazelrc  .clang-format  .clang-tidy  .gitmodules  CONTRIBUTING.md  MODULE.bazel  README.md
.github/workflows/: ci-format-test-lint.yml  clang-format-and-lint.yml  clang-format-check.yml
providers/flagd/: BUILD  README.md  cwt_cucumber.BUILD  flagd-schemas.BUILD  flagd_schemas.BUILD  flagd_testbed.BUILD  json_schema_validator.BUILD  qcbor.BUILD
providers/flagd/include/flagd/: configuration.h  provider.h  sync.h
providers/flagd/openfeature/: BUILD
providers/flagd/src/: BUILD  configuration.cpp  configuration.h  evaluator.cpp  evaluator.h  provider.cc  provider.cpp  provider.h  sync.cpp  sync.h
providers/flagd/src/evaluator/: BUILD  datalogic_engine.cpp  datalogic_engine.h  evaluator.cpp  evaluator.h  flagd_ops.cpp  flagd_ops.h
providers/flagd/src/evaluator/json_logic/: BUILD  README.md  array.cpp  array.h  cli.cpp  data.cpp  data.h  json_logic.cpp  json_logic.h  logic.cpp  logic.h  numeric.cpp  numeric.h  string_ops.cpp  string_ops.h  utils.cpp  utils.h
providers/flagd/src/evaluator/json_logic/ops/: array.cpp  data.cpp  data.h  logic.cpp  logic.h  numeric.cpp  string_ops.cpp  string_ops.h
providers/flagd/src/evaluator/murmur_hash/: .clang-tidy  BUILD  MurmurHash3.cpp  MurmurHash3.h  README.md
providers/flagd/src/evaluator/ops/: array.cpp  array.h  data.cpp  data.h  logic.cpp  logic.h  numeric.cpp  numeric.h  string_ops.cpp  string_ops.h  utils.cpp  utils.h
providers/flagd/src/sync/: BUILD  sync.cpp  sync.h
providers/flagd/src/sync/file/: BUILD  file_sync.cpp  file_sync.h
providers/flagd/src/sync/grpc/: BUILD  grpc_sync.cpp  grpc_sync.h
providers/flagd/tests/: .clang-tidy  BUILD  configuration_test.cpp  evaluator_test.cpp  file_sync_test.cpp  provider_test.cpp  sync_test.cpp
providers/flagd/tests/evaluator/: BUILD  datalogic_engine_test.cpp  evaluator_test.cpp  flagd_fractional_op_test.cpp  flagd_ops_test.cpp  ops_test.cpp
providers/flagd/tests/evaluator/json_logic/: BUILD  check_progress.py  generate_tests_annotations.py  json_logic_annotated_test.cpp  json_logic_official_test.cpp  json_logic_test.cpp  ops_test.cpp  tests.json  tests_annotated.json
providers/flagd/tests/fractional/: BUILD  fractional_test.cpp
providers/flagd/tests/fractional/test1000/: 0.cbor  0.hash  0.json  1.cbor  1.hash  10.cbor  10.hash  10.json  101.cbor  101.hash  101.json  102.cbor  102.hash  102.json  103.cbor  103.hash  103.json  104.cbor  104.hash  105.cbor  105.hash  105.json  106.cbor  106.hash  106.json  107.cbor  107.hash  107.json  109.cbor  109.hash  109.json  11.hash  110.cbor  110.hash  110.json  111.cbor  111.hash  111.json  112.cbor  112.hash  (+2449 more)
providers/flagd/tests/gherkin/: BUILD  steps.cpp  test_env.cpp  test_env.h  test_runner.cpp  test_state.cpp  test_state.h
providers/flagd/tests/smoke/: BUILD  README.md  grpc_sync.cpp  openfeature.cpp  sync.cpp
providers/flagd/tools/: BUILD  generate_schema_header.py
