module(name = "cpp_sdk_contrib")

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "abseil-cpp", version = "20250814.2")
bazel_dep(name = "openfeature_cpp_sdk")
git_override(
    module_name = "openfeature_cpp_sdk",
    branch = "main",
    remote = "https://github.com/open-feature/cpp-sdk.git",
)

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    # Not official but well established fork with a fix to header only libraries
    # https://github.com/hedronvision/bazel-compile-commands-extractor/pull/219
    commit = "02d15621b528efd877f5d5657c4b738523a0eb17",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

bazel_dep(name = "grpc", version = "1.76.0", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "protobuf", version = "33.6", repo_name = "com_google_protobuf")
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1")

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "flagd_schemas",
    build_file = "//providers/flagd:flagd_schemas.BUILD",
    commit = "9f823b5b36bf219f8ea342de006fdf5013c1bc79",
    remote = "https://github.com/open-feature/flagd-schemas.git",
)

git_repository(
    name = "nlohmann_json_schema_validator",
    build_file = "//providers/flagd:json_schema_validator.BUILD",
    remote = "https://github.com/pboettch/json-schema-validator.git",
    tag = "2.4.0",
)
